<resources>
    <string name="app_name">DoD announcement</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="title">TextView</string>
    <string name="update_time">Null.Null,Null update</string>
    <string name="title_name">동의대학교 학생식당 정보ㅤ</string>
    <string name="update_text">2022.03.06 update</string>
    <string name="title_1">수덕전</string>
    <string name="title_2">정보공학관</string>
    <string name="info_title">정보공학관</string>
    <string name="su_title">수덕전</string>
    <string name="update">2022.03.06 Update</string>
    <string name="button_text">동의대학교 출결앱</string>
    <string name="button_text2">동의대학교 모바일</string>
</resources>