<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="40"
    android:background="@drawable/circle"
    android:theme="@style/Theme.Deu_food_gui.AppWidgetContainer">

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_name"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/update_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="Update:"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/update_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/null_box2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30" />

        <TextView
            android:id="@+id/button_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="⚙️새로고침"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuinfo_layout"
        android:layout_width="wrap_content"
        android:layout_height="584dp"
        android:layout_above="@id/button_layer"
        android:layout_below="@id/title_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="@drawable/button_circle">

            <TextView
                android:id="@+id/text_fix1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/info_title"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/info"
                android:layout_width="156dp"
                android:layout_height="575dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="4dp">

            </ListView>

        </RelativeLayout>

        <TextView
            android:id="@+id/null_box4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="@drawable/button_circle">

            <TextView
                android:id="@+id/texrt_fix2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="9dp"
                android:layout_marginTop="8dp"
                android:text="@string/su_title"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/sudack"
                android:layout_width="156dp"
                android:layout_height="575dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="4dp" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/App_start2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_circle"
            android:text="@string/button_text2"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/null_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />

        <Button
            android:id="@+id/App_start1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_circle"
            android:text="@string/button_text"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</RelativeLayout>